feat: add experimental legacy cuda setting
